--- a/aptus-site/index.html
+++ b/aptus-site/index.html
@@ -78,14 +78,11 @@
         </div>
     </div>
     -->
-
     <div class="section">
         <div class="container">
-                <p>Aptus Group is an IT consulting group based in Bellevue, Washington. We provide excellent resources for any technical or business need. Our teams of exceptional individuals help our clients achieve their business goals and fulfill their technology needs. We support our client leaders by pairing them with exceptional people, proper support, and superior results.</p>
+            <p>Aptus Group is an IT consulting group based in Bellevue, Washington. We provide excellent resources for any technical or business need. Our teams of exceptional individuals help our clients achieve their business goals and fulfill their technology needs. We support our client leaders by pairing them with exceptional people, proper support, and superior results.</p>
         </div>
     </div>
-
-
     <div class="section">
         <div class="container">
             <div class="row">
@@ -113,39 +110,98 @@
             </div>
         </div>
     </div>
-
     <div class="section" id='careers'>
         <div class="container">
-        <h2>Careers</h2>
+            <h2>Careers</h2>
             <div class="row">
-                <div class="col-md-4">
+                <div class="col-md-6">
                     <div class='card1'>
                         <h3>Technical Recruiter</h3>
-                        <p>Short description here</p>
-                        <a href='#'>Apply Today</a>
+                        <h4 class='location'>Location: Bellevue, WA</h4>
+                        <p>As a recruiter you will be immersed within the culture of a company that continues to grow and exceed expectations. Your role will be working closely with the recruiting team on all company needs both internal & external.</p>
+                        <div class='read-more'>
+                            <b>Who are you?</b>
+                            <ul>
+                                <li>You understand what success looks like and you also get that that your individual needs and motivations can be met while succeeding in a team environment.</li>
+                                <li>You have asked yourself shouldn’t there be more to this and what do I need to do to get to the next level of my career.</li>
+                                <li>You are challenged daily and ask questions that allow you to build relationships with your candidates.</li>
+                                <li>The ability you have to connect with others makes you stand out among your competition and has provided your candidates with exceptional service.</li>
+                                <li>Passion, Motivation, Differentiation, Negotiation, and Confidence are all words you know well.</li>
+                            </ul>
+                            <b>What your day will look like:</b>
+                            <ul>
+                                <li>Meet with Directors, hiring managers, and others to assess business requirements and collaborate with recruiting team on immediate needs.</li>
+                                <li>Organize your calendar and prioritize your day.</li>
+                                <li>Develop talent pipeline through all sourcing techniques – Boolean, X-Ray, etc.</li>
+                                <li>Proactively sourcing high quality passive candidates, leveraging your network and utilizing creative sourcing strategies.</li>
+                                <li>Take ownership of the recruiting process with each candidate from start to finish.</li>
+                                <li>Understand the importance of candidate workflow and follow up.</li>
+                                <li>Requirements gathering, analysis, current market rates, negotiation, research, training, etc.</li>
+                            </ul>
+                            <b>Desired Skills & Experience:</b>
+                            <ul>
+                                <li>1-3+ years as a Technical Recruiter in high pace / urgent / agency style environment.</li>
+                                <li>Successful placements of candidates in both .NET and Java/Open source Environments.</li>
+                                <li>Ability to communicate with Colleagues, Hiring managers, Directors, VP’s, Owners, etc. </li>
+                                <li>Capable of creating complex Boolean searches to identify talent.</li>
+                                <li>Ability to build pipelines for difficult skillsets and be prepared for what’s next.</li>
+                                <li>Highly driven and self-directed, and a desire to work in a highly autonomous environment.</li>
+                                <li>Inquisitive; a strong desire to learn paired with exceptional research, consulting, executive sourcing, and assessing skills.</li>
+                                <li>Self-confidence, perseverance, excellent communication skills and a high sense of urgency.</li>
+                                <li>Ability to leverage technology experience to manage and grow your business.</li>
+                                <b>Education:</b>
+                                <li>Bachelor’s degree preferred but if you have the experience, let’s chat.</li>
+                            </ul>
+                        </div>
+                        <button class='read-more-btn btn btn-link'>Read More</button>
                     </div>
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-6">
                     <div class='card1'>
-                        <h3>Source In Recruiter</h3>
-                        <p>Short description here</p>
-                        <a href='#'>Apply Today</a>
+                        <h3>Technical Source Recruiter</h3>
+                        <h4 class='location'>Location: Bellevue, WA</h4>
+                        <p>We are looking for a source recruiter to partner with a team of talented recruiting horsepower. We are looking for someone who is hungry and ready to push themselves to the next level. If a future in IT recruiting for one of the fastest growing companies in the Seattle area sounds like it’s in your wheelhouse, then we should chat today.</p>
+                        <div class='read-more'>
+                            <p>You will be working alongside a team who has experience, drive, and the motivation to not only meet aggressive goals but also exceed them. If you are looking to join a team that views everything “big picture”, then this could be for you. Full transparency, this role requires urgency, dedication, passion, and the ability to quickly adapt and transfer resources daily, sometimes hourly as needed. With the pace of business these days, time and information gathering is critical so being detail oriented, organized, and methodical is one of the keys to measure your success.</p>
+                            <b>What do I do?</b>
+                            <ul>
+                                <li>Source high volume quantity of candidate’s daily active job boards / listings / applications, etc.</li>
+                                <li>Be initial point of contact for all candidates sourced and funnel them to the appropriate personnel.</li>
+                                <li>Develop relationships with internal team to understand practice needs / fulfillment strategies / and execution of sourcing capabilities. </li>
+                                <li>Understand your role as a “sponge” to any information.</li>
+                                <li>Meet with Recruiting Manager, Directors, hiring managers, and others to assess business requirements and collaborate with recruiting team on immediate needs / Metrics / and capacity.</li>
+                                <li>Develop talent pipeline through all sourcing techniques.</li>
+                                <li>Responsible for managing a large volume of candidates through various stages of contact.</li>
+                                <li>Requirements gathering, analysis, current market rates, negotiation, research, training, etc.</li>
+                            </ul>
+                            <b>Desired Skills & Experience:</b>
+                            <ul>
+                                <li>Understand the value of building relationships both personally & professionally.</li>
+                                <li>Wants to be trained by an experienced team and learn about the consulting world.</li>
+                                <li>Be highly collaborative and open-minded to new ideas, methods, and change.</li>
+                                <li>Passionate, Motivated, and Organized.</li>
+                                <li>Attention to Detail and ability to decipher information quickly to determine relevancy.</li>
+                                <li>Inquisitive; a strong desire to learn paired with exceptional research, consulting, executive sourcing, and assessing skills.</li>
+                                <li>Self-confidence, perseverance, excellent communication skills and a high sense of urgency.</li>
+                            </ul>
+                            <b>Education:</b>
+                            <ul>
+                                <li>4 year degree or other related education experience.</li>
+                            </ul>
+                        </div>
+                        <button class='read-more-btn btn btn-link'>Read More</button>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-
-
-
     <div class="section">
         <div class="container">
             <h2>About Aptus Group</h2>
-                <p>We understand that business leaders want a business partner that understand the simple proposition to get work done faster, better, and more efficiently. Our teams help you achieve your business goals by understanding the underlying business problem you’re trying to solve and filling the gaps with exceptionally talented people. The Aptus Group pairs always you with the best people for your job.</p>
-                <p>When you want to hire employees permanently or on a contract basis, we provide the right scalable staffing strategy for your business and implement it quickly and efficiently. Whether you want to build a large-scale managed services team or you want to augment an existing high-performing team, we deliver you the best talent in an increasingly competitive market.</p>
+            <p>We understand that business leaders want a business partner that understand the simple proposition to get work done faster, better, and more efficiently. Our teams help you achieve your business goals by understanding the underlying business problem you’re trying to solve and filling the gaps with exceptionally talented people. The Aptus Group pairs always you with the best people for your job.</p>
+            <p>When you want to hire employees permanently or on a contract basis, we provide the right scalable staffing strategy for your business and implement it quickly and efficiently. Whether you want to build a large-scale managed services team or you want to augment an existing high-performing team, we deliver you the best talent in an increasingly competitive market.</p>
         </div>
     </div>
-
     <!-- Footer -->
     <div class="footer">
         <div class="container">
@@ -161,7 +217,6 @@
                     </p>
                 </div>
                 <div class="col-footer col-md-2 col-xs-6">
-                    
                 </div>
             </div>
             <div class="row">
@@ -179,8 +234,7 @@
     <script src="js/bootstrap.min.js"></script>
     <script src="http://cdn.leafletjs.com/leaflet-0.5.1/leaflet.js"></script>
     <script src="js/jquery.fitvids.js"></script>
-    <script src="js/jquery.sequence-min.js"></script>
-    <script src="js/jquery.bxslider.js"></script>
+
     <script src="js/template.js"></script>
 </body>
 
