--- a/bpcs-v4/work.html
+++ b/bpcs-v4/work.html
@@ -234,7 +234,7 @@ accountability for getting those issues fixed.</p>
 
                         <div class='col-md-8'>
                             <h4><small>2014</small></h4>
-                            <h4>Top 100 Seattle Best Companies to work for</h4>
+                            <h4>Top 100 Seattle Best Companies To Work For</h4>
                             <p>Seattle Business Magazine</p>
                             <a href='http://seattlebusinessmag.com/article/100-best-companies-work-2014-full-list-0' target='blank'>Read more <i class="fa fa-arrow-right fa-fw"></i></a>
                         </div>
