--- a/bpcs-v4/index.html
+++ b/bpcs-v4/index.html
@@ -91,7 +91,7 @@
     <!--WORKS / PORTFOLIO SECTION END  -->
     <section id="blog" class='container-alt'>
         <div class="container">
-            <h2>WHAT WE ARE THINKING <a href='connect.html'><small>View All</small></a></h2>
+            <h2>WHAT WE ARE THINKING <a href='connect.html#blog'><small>View All</small></a></h2>
             <div class="row">
                 <div class='col-md-3'>
                     <h2 class='accent-heading'>What it's like inside our minds...</h2>
@@ -102,16 +102,16 @@
                         <h4 class="head-set">Do You Need An App For That?</h4>
                         <p>
                             Recently, I was in the good company of a group of friends and acquaintances, enjoying some food, wine, and cigars. Towards the end of the evening, conversations shifted from sports, current events, religion and politics to business and technology by a couple of guys who were co-founders of a winery startup.
-                            <a href='http://bpcs.com/app.php'>Read more <i class="fa fa-arrow-right fa-fw"></i></a>
                         </p>
+                        <a href='http://bpcs.com/app.php'>Read more <i class="fa fa-arrow-right fa-fw"></i></a>
                     </div>
                     <div class="col-md-6 col-sm-6 col-xs-12">
                         <i class="fa fa-calendar  fa-5x"></i>
                         <h4 class="head-set">Developing For After </h4>
                         <p>
                             During the application development process, we strive to meet the requirements of the customer. What often falls out of sight is the time after the application is deployed by the customer. Thinking past development is a key factor to success.
-                            <a href='http://bpcs.com/developing.php'>Read more <i class="fa fa-arrow-right fa-fw"></i></a>
                         </p>
+                        <a href='http://bpcs.com/developing.php'>Read more <i class="fa fa-arrow-right fa-fw"></i></a>
                     </div>
                 </div>
             </div>
