--- a/hancock/gnakan.html
+++ b/hancock/gnakan.html
@@ -1,23 +1,24 @@
-<link rel='stylesheet' href='main.css' type='text/css'></link>
-<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
-<div class='bpcs_signature'>
-    <div class='split logo'>
-        <img src='img/bpcs_logo.png'>
-    	<a href='http://www.bpcs.com'>www.bpcs.com</a>
-    </div>
-
-    <div class='split'>
-        <h1>Gary Nakanelua</h1>
-        <h2>Senior Consultant</h2>
-        <ul class='contact'>
-            <li><img src='img/email.png'><a href='mailto:gnakan@bpcs.com'>gnaka@bpcs.com</a></li>
-            <li><img src='img/phone.png'>480.209.0406</li>
-        </ul>
-        <ul class='social'>
-        	<li><img src='img/linkedin.png'></li>
-        	<li><img src='img/facebook.png'></li>
-        	<li><img src='img/twitter.png'></li>
-        </ul>
-        <ul class='awards'></ul>
-    </div>
-</div>
+<table cellpadding="0" cellspacing="0" style="border: none; text-align: left; font-family: sans-serif; font-weight: 100; font-size: 12px; color: #333;">
+  <tr>
+    <th rowspan="5" style="border-right: 3px solid #4E90CD; padding-right:6px;"><img src='http://gnakan.github.io/hancock/img/bpcs_logo.png'></th>
+    <th colspan="4" style="padding-left: 6px; font-size: 14px; height: 12px; color: #333;">Gary Nakanelua</th>
+  </tr>
+  <tr>
+    <td colspan="4" style="padding-left: 6px; height: 12px; color: #333;">Senior Consultant</td>
+  </tr>
+  <tr style="height:20px">
+    <td colspan="1" style="padding-left: 6px; height:12px; vertical-align:bottom;"><img src='http://gnakan.github.io/hancock/img/email.png'></td>
+    <td colspan="3" style="height: 12px; vertical-align:bottom;">
+    <a style="color:#333;text-decoration:none;" href='mailto:gnakan@bpcs.com'>gnaka@bpcs.com</a></td>
+  </tr>
+  <tr>
+    <td colspan="1" style="padding-left: 6px;"><img src='http://gnakan.github.io/hancock/img/phone.png'></td>
+    <td colspan="3">480.209.0406</td>
+  </tr>
+  <tr>
+    <td colspan="1" style="width: 20px; padding-left: 6px;"><img src='http://gnakan.github.io/hancock/img/linkedin.png'></td>
+    <td colspan="1" style="width: 20px;"><img src='http://gnakan.github.io/hancock/img/twitter.png'></td>
+    <td colspan="1" ><img src='http://gnakan.github.io/hancock/img/facebook.png'></td>
+    <td colspan="1" ></td>
+  </tr>
+</table>
