--- a/hancock/gnakan.html
+++ b/hancock/gnakan.html
@@ -1,7 +1,7 @@
-<table cellpadding="0" cellspacing="0" style="border: none; text-align: left; font-family: sans-serif; font-weight: 100; font-size: 12px; color: #333;">
+<table cellpadding="0" cellspacing="0" style="border: none; font-family: sans-serif; font-weight: 100; font-size: 12px; color: #333;">
   <tr>
     <th rowspan="5" style="border-right: 3px solid #4E90CD; padding-right:6px;"><img src='http://gnakan.github.io/hancock/img/bpcs_logo.png'></th>
-    <th colspan="4" style="padding-left: 6px; font-size: 14px; height: 12px; color: #333;">Gary Nakanelua</th>
+    <th align="left" colspan="4" style="padding-left: 6px; font-size: 14px; height: 12px; color: #333;">Gary Nakanelua</th>
   </tr>
   <tr>
     <td colspan="4" style="padding-left: 6px; height: 12px; color: #333;">Senior Consultant</td>
